@@ -102,7 +102,7 @@ There are two ways to do this: either use the CLI's `deploy` command or manually
 If the package author states support for it, the package can be deployed with the CLI's `deploy` command.
 [source,bash]
 ----
-$ bin/solr package deploy <package-name>:[version] --collections <collection1>[,<collection2>,...] [-p <param1>=<val1> -p <param2>=<val2> ...
+$ bin/solr package deploy <package-name>:[version] --collections <collection1>[,<collection2>,...] [--param <param1>=<val1> --param <param2>=<val2> ...
 ----
 
 or
@@ -116,7 +116,7 @@ If the package accepts parameters for its setup commands, they can be specified 
 
 [source,bash]
 ----
-$ bin/solr package deploy <snipped...> -p <param1>=<val1> -p <param2>=<val2>
+$ bin/solr package deploy <snipped...> --param <param1>=<val1> --param <param2>=<val2>
 ----
 
 The author may want you to confirm deployment of a package via a prompt.
